--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               </div>
               <br> <br> <br>
                <span class="h1 text-white"><b>See what's fresh <br>with Mint</b></span>
-              <p class="se text-white mt-4">Our fresh new look is just the beginning.Learn about the launch of Mint <br>Bills and other news from the world of money management.</p>
+              <p class="se text-white mt-4">Our fresh new look is just the beginning.Learn about the launch of Mint Bills and other news from the world of money management.</p>
               <button type="button" class="btn btn-outline-secondary text-white mt-4">News & Press Releases</button>
          </div>
           </div>
@@ -292,7 +292,7 @@
             <div class="inner-box7">
               <br><br><br><br>
               <span class="h2 text-dark"><b>Sign up for Mint today</b></span>
-              <p class="si text-dark mt-2"><b>From budgets and bills top free credit score and more,<br> you'll discover  the effortlessway to stay on top of it all.</b></p>
+              <p class="si text-dark mt-2"><b>From budgets and bills top free credit score and more, you'll discover  the effortlessway to stay on top of it all.</b></p>
               <button type="button" class="btn  btn-warning text-white"><b></b>CREATE AN ACCOUNT</b> 
               </button>
               <button type="button" class="btn btn-outline-secondary"><b></b>LOGIN</b></button>
