--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <br> <br> <br>
                <span class="h1 text-white"><b>See what's fresh <br>with Mint</b></span>
               <p class="se text-white mt-4">Our fresh new look is just the beginning.Learn about the launch of Mint <br>Bills and other news from the world of money management.</p>
-              <button type="button" class="btn btn-outline-secondary text-white mt-4">News & Press Releases</button>
+              <button type="button" class="btn btn-outline-secondary text-white mt-4 mb-4">News & Press Releases</button>
          </div>
           </div>
         </div>
